// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellSelect - Snapshot should render default settings correctly 1`] = `
<SelectItem
  isSelected={false}
  style={Object {}}
  testID="cell-account-select"
>
  <CellBase
    avatarProps={
      Object {
        "jazzIconProps": Object {
          "address": "0x10e08af911f2e489480fb2855b24771745d0198b50f5c55891369844a8c57092",
        },
        "variant": "JazzIcon",
      }
    }
    title="Orangefox.eth"
  />
</SelectItem>
`;

exports[`CellSelect - Snapshot should render the proper selected state 1`] = `
<SelectItem
  isSelected={true}
  style={Object {}}
  testID="cell-account-select"
>
  <CellBase
    avatarProps={
      Object {
        "jazzIconProps": Object {
          "address": "0x10e08af911f2e489480fb2855b24771745d0198b50f5c55891369844a8c57092",
        },
        "variant": "JazzIcon",
      }
    }
    title="Orangefox.eth"
  />
</SelectItem>
`;
